# crafting-interpreters

./: .gitignore
clox/: CMakeLists.txt
clox/.cache/clangd/index/: chunk.c.A1169619483972E2.idx  chunk.h.9DB45DEFC95F4E6E.idx  common.h.1195AABB8C90CE1C.idx  compiler.c.C1A6893C24A42C27.idx  compiler.h.A7135C85D88F4E4C.idx  debug.c.D49C70DD6C6A1642.idx  debug.h.F12F0190657DFE51.idx  main.c.FF24178F24E8CA8B.idx  memory.c.2416CEF0466F6A60.idx  memory.h.17ED54404BA3D315.idx  scanner.c.4523DF21E2BEA358.idx  scanner.h.D6304D7406C0D77D.idx  value.c.F677FFAFAC411F81.idx  value.h.0DD745847FCC65CC.idx  vm.c.85E943C27B361070.idx  vm.h.9F140D39AEC5EA89.idx
clox/scripts/: arguments.txt  ch8.txt  class.txt  fib.txt  functions.txt  gettersSetters.txt  inheritance.txt  performanceTest.txt  printClass.txt  scopes.txt  this.txt  while.txt
clox/src/: main.c
clox/src/chunk/: chunk.c  chunk.h
clox/src/common/: common.h
clox/src/compiler/: compiler.c  compiler.h
clox/src/debug/: debug.c
clox/src/memory/: memory.c  memory.h
clox/src/object/: object.c  object.h
clox/src/scanner/: scanner.c  scanner.h
clox/src/table/: table.c  table.h
clox/src/value/: value.c  value.h
clox/src/vm/: vm.c  vm.h
glox/: go.mod  main.go
glox/ast/: expr.go  print.go
glox/errorhandling/: errorhandling.go
glox/expr/: expr.go
glox/parser/: clock.go  environment.go  expr.go  interpreter.go  loxcallable.go  loxclass.go  parser.go  print.go  resolver.go  stmt.go
glox/scanner/: scanner.go  scanner_test.go
glox/scripts/: ch8.txt  class.txt  fib.txt  forLoop.txt  functions.txt  resolve.txt  (+4 more)
(+2 files in other folders)
